# libepoxy-emscripten

./: README.md  meson.build  meson_options.txt
.github/workflows/: linux.yml
doc/: Doxyfile.in
include/epoxy/: common.h  gl.h  meson.build
registry/: egl.xml
src/: dispatch_common.c  dispatch_common.h  dispatch_egl.c  dispatch_emscripten.c  gen_dispatch.py  meson.build
test/: egl_gl.c  meson.build  miscdefines.c
